--- a/index.html
+++ b/index.html
@@ -1,109 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>День Святого Валентина</title>
+    <title>Спокойной ночи, Марсель 🌙</title>
+    <style>
+     body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:url('https://mir-kliparta.com/uploads/posts/2013-07/1373889765_1b5jvritfjr69wy.jpeg');
+    background-size: cover;
+    overflow: hidden;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+
+        .stars {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            overflow: hidden;
+        }
+
+        .stars::after {
+            content: '';
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            background: transparent url('https://99px.ru/sstorage/86/2016/03/image_862903162236248828026.gif') repeat;
+            background-size: contain;
+            opacity: 0.3;
+            animation: moveStars 60s linear infinite;
+        }
+
+        @keyframes moveStars {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-50%); }
+        }
+
+        .card {
+            position: relative;
+            width: 350px;
+            height: 500px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 25px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 20px;
+        }
+
+        button {
+            margin-bottom: 30px;
+            padding: 15px 30px;
+            font-size: 18px;
+            border: none;
+            border-radius: 30px;
+            background-color: #ffd6e0;
+            color: #2c3e50;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background 0.3s;
+            font-family: 'cursive';
+        }
+
+        button:hover {
+            background-color: #ffc0cb;
+        }
+
+        .message {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 20px;
+            color: #fff;
+            font-size: 20px;
+            text-align: center;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out forwards;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -30px);
+            }
+            100% {
+                opacity: 1;
+                transform: translate(-50%, 0);
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="valentine-card">
-        <button onclick="showMessage()">Нажми на меня</button>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
 
-<style>
-body {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("https://elements-video-cover-images-0.imgix.net/42e4a78a-f832-48e2-bdf5-5ddd3bbe6bf9/video_preview/video_preview_0000.jpg?auto=compress%2Cformat&h=394&w=700&fit=min&s=ac7237f8f7f616d445976e596a395538");
-}
+<div class="stars"></div>
 
-.valentine-card {
-    position: relative;
-    width: 80%;
-    max-width: 300px;
-    height: 400px;
-    background-image: url('https://i.pinimg.com/736x/04/a3/7b/04a37bd3c89c2492b9d858e66a31ffcf.jpg'); /* Замените на свое изображение с сердечками */
-    background-size: cover;
-    background-position: center; /* Добавлено для выравнивания по центру */
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-}
-
-button {
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 15px 30px;
-    font-size: 18px;
-    font-family: 'cursive'; /* Замените на ваш шрифт */
-    background-color: #ff5e78;
-    color: #fff;
-    border: none;
-    border-radius: 50px; /* Закругленные углы */
-    cursor: pointer;
-}
-
-.message {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px;
-    font-size: 18px;
-    font-family: 'cursive'; /* Замените на ваш шрифт */
-    background-color: rgba(255, 51, 51, 0.8);
-    color: #fff;
-    border-radius: 10px;
-    opacity: 0;
-    animation: showMessage 0.5s ease-in-out forwards;
-    z-index: 1;
-}
-
-@keyframes showMessage {
-    0% {
-        opacity: 0;
-        transform: translate(-50%, -20px);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(-50%, 0);
-    }
-}
-
-
-</style>
+<div class="card">
+    <button onclick="showMessage()">🌙 Нажми перед сном 💫</button>
+</div>
 
 <script>
     function showMessage() {
-    const valentineCard = document.querySelector('.valentine-card');
-    const message = document.createElement('div');
-    message.classList.add('message');
-    const name = "Ширин";
-    message.innerHTML = `<p> не Поздравляю тебя1111111111111, ${name}, с Днем Святого Валентина!</p>`;
+        const card = document.querySelector('.card');
+        const message = document.createElement('div');
+        message.classList.add('message');
 
-    valentineCard.appendChild(message);
+        message.innerHTML = `
+            <p>🌌 Спокойной ночи, милая Марсель! 🌙<br><br>
+            Пусть твои сны будут нежными, как облака,<br>
+            и красивыми, как звезды на небе. ✨<br><br>
+            Ты — самое тёплое сияние в этой ночи 💖<br><br>
+            😴💤💫🌠🌜</p>
+        `;
 
-    setTimeout(() => {
-        message.classList.add('show');
-    }, 10);
+        card.appendChild(message);
 
-    setTimeout(() => {
-        message.classList.remove('show');
         setTimeout(() => {
-            valentineCard.removeChild(message);
-        }, 500);
-    }, 5000);
-}
-
+            message.remove();
+        }, 8000);
+    }
 </script>
+
+</body>
+</html>
