--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Спокойной ночи, Марсель 🌙</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
      body {
         margin: 0;
@@ -44,7 +45,8 @@
 
     .card {
         position: relative;
-        width: 420px;
+        width: 90%;
+        max-width: 420px;
         height: 580px;
         background: rgba(255, 255, 255, 0.1);
         border-radius: 30px;
