--- a/index.html
+++ b/index.html
@@ -178,10 +178,8 @@
         message.classList.add('message');
 
         message.innerHTML = `
-            <p>🌌 Спокойной ночи, милая Марсель! 🌙<br><br>
-            Пусть твои сны будут нежными, как облака,<br>
-            и красивыми, как звезды на небе. ✨<br><br>
-            Ты — самое тёплое сияние в этой ночи 💖<br><br>
+            <p>🌌 Спокойной ночи Марсель! 🌙<br><br>
+
             😴💤💫🌠🌜</p>
         `;
 
